// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App includes Header 1`] = `
<div>
  <div
    className="header"
  >
    <h1>
      Hello World
    </h1>
  </div>
  <button
    onClick={[Function]}
  >
    Hi
  </button>
</div>
`;

exports[`exploring snapshot 1`] = `
<div
  className="header"
>
  <h1>
    Hello World
  </h1>
</div>
`;
